<resources>
    <string name="app_name">StoreApp</string>
    <string name="productDetails">Details</string>
    <string name="productEdit">Edit</string>
    <string name="productDelete">Delete</string>
    <string name="productDetailsDescription">Description:</string>
    <string name="productDetailsPrice">Price:</string>
    <string name="productDetailsReviews">Reviews:</string>
    <string name="loginUsername">Username:</string>
    <string name="loginPassword">Password:</string>
    <string name="loginForgot">Forgot password</string>
    <string name="loginButton">Login</string>
    <string name="backButton">Back</string>
    <string name="loginMenu">Login</string>
    <string name="confirmationMessage">Are you sure?</string>
    <string name="confirmationYes">Yes</string>
    <string name="confirmationNo">No</string>
    <string name="logoutMessage">Logging out</string>
    <string name="registerProductName">Name:</string>
    <string name="registerProductDescription">Description:</string>
    <string name="registerProductPrice">Price:</string>
    <string name="registerProductCategory">Category:</string>
    <string name="registerButton">Register</string>
    <string name="editButton">Edit</string>
    <string name="registerReviewProduct">Product:</string>
    <string name="registerReviewComment">Comment:</string>
    <string name="registerReviewRating">Rating:</string>
    <string name="favourite">Favourite</string>
    <string name="inventoryLocation">Location:</string>
    <string name="inventoryAddress">Address:</string>
    <string name="inventoryTotalValue">Total Value:</string>
    <string name="inventoryAddMap">Add Map Location</string>
    <string name="inventorySeeMap">See Map Location</string>
    <string name="mapSave">Save</string>
    <string name="mapDelete">Reset</string>
    <string name="mapMessage">Please, select a point in the map</string>
    <string name="mapRoute">Calculate Route</string>
    <string name="search">Search product</string>
    <string name="preferences1">Remember me</string>
    <string name="preferences2">View map center on me</string>
    <string name="preferences3">Favourites Default</string>
    <string name="settingsSaved">Preferences saved!</string>
    <string name="settingsError">Error saving preferences!</string>

    <string name="reviewComment">Comment:</string>
    <string name="reviewDate">Date:</string>
    <string name="reviewRating">Rating:</string>
    <string name="reviewUsername">By:</string>
    <string name="a"></string>
</resources>